<resources>
    <string name="app_name">Grocery_App</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add First Item</string>
    <string name="enter_item">Enter Grocery Item</string>
    <string name="hint_item">Enter Grocery</string>
    <string name="hint_quantity">Enter Quantity</string>
    <string name="btn_save">Save</string>
    <string name="title_activity_list">Grocery List</string>
    <string name="grocery_name">Grocery Name</string>
    <string name="grocery_quantity">Quantity: </string>
    <string name="date">Date</string>
    <string name="quantity_no">0</string>
    <string name="sure_text">Are You Sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
