<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/itemName"
                android:textStyle="bold"
                android:text="@string/grocery_name"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtQuantity"
                android:layout_below="@+id/itemName"
                android:textStyle="italic"
                android:text="@string/grocery_quantity"
                android:textSize="14sp"
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/itemQuantity"
                android:layout_below="@+id/itemName"
                android:layout_toRightOf="@+id/txtQuantity"
                android:textStyle="italic"
                android:paddingLeft="2dp"
                android:paddingTop="5dp"
                android:text="@string/quantity_no"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/itemAddedDate"
                android:layout_below="@+id/txtQuantity"
                android:textStyle="italic"
                android:text="@string/date"
                android:paddingTop="5dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TableRow
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_alignBottom="@+id/itemAddedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/editButton"
                    android:background="@android:drawable/ic_menu_edit"
                    android:layout_marginRight="15dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/deleteButton"
                    android:background="@android:drawable/ic_delete"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

            </TableRow>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>